# Static-Timing-Analysis-STA-Engine

./: .gitignore  CMakeLists.txt  README.md
examples/basic/: basic.lib  basic.sdc  basic.v  override.txt
examples/multiclock/: multiclock.lib  multiclock.sdc  multiclock.v
include/sta/: engine.hpp
scripts/: sta_shell.tcl
src/: engine.cpp  main.cpp
tests/: test_sta.cpp
